kubernetes/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interstellar-frontend-deployment
  labels:
    app: interstellar-frontend
spec:
  selector:
    matchLabels:
      app: interstellar-frontend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: interstellar-frontend
    spec:
      containers:
      - name: interstellar-frontend
        image: arjuninventor/interstellar-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "20m"
          limits:
            memory: "256Mi"
            cpu: "500m"
