kubernetes/logs_api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interstellar-logs-api-deployment
  labels:
    app: interstellar-logs-api
spec:
  selector:
    matchLabels:
      app: interstellar-logs-api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: interstellar-logs-api
    spec:
      containers:
      - name: interstellar-logs-api
        image: arjuninventor/interstellar-logs-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "64Mi"
            cpu: "20m"
          limits:
            memory: "256Mi"
            cpu: "500m"
