kubernetes/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interstellar-frontend-service
spec:
  type: NodePort
  selector:
    app: interstellar-frontend
  ports:
  - name: "port-1"
    port: 80
    protocol: TCP
    targetPort: 80
