kubernetes/logs_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interstellar-logs-api-service
spec:
  type: NodePort
  selector:
    app: interstellar-logs-api
  ports:
  - name: "port-1"
    port: 8082
    protocol: TCP
    targetPort: 8082
