kubernetes/profile_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interstellar-profile-api-service
spec:
  type: NodePort
  selector:
    app: interstellar-profile-api
  ports:
  - name: "port-1"
    port: 8081
    protocol: TCP
    targetPort: 8081
