kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: arjuninventor.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: interstellar-frontend-service
          servicePort: 80
      - path: /api/profile
        backend:
          serviceName: interstellar-profile-api-service
          servicePort: 8081
      - path: /api/profile/?(.*)
        backend:
          serviceName: interstellar-profile-api-service
          servicePort: 8081
